tests/snapshots/dbc-cantools/timing.snap
---
source: tests/snapshots.rs
---
version: "3.0"
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
nodes:
  - Sender
  - Receiver
messages:
  - id:
      Standard: 1
    name: Foo
    size: 8
    transmitter: Sender
    signals:
      - name: Foo
        multiplexer_indicator: Plain
        start_bit: 0
        size: 12
        byte_order: BigEndian
        value_type: Signed
        factor: 0.01
        offset: 250
        min:
          Double: 229.53
        max:
          Double: 270.47
        unit: degK
        receivers:
          - Receiver
  - id:
      Standard: 2
    name: Bar
    size: 8
    transmitter: Sender
    signals:
      - name: Foo
        multiplexer_indicator: Plain
        start_bit: 0
        size: 12
        byte_order: BigEndian
        value_type: Signed
        factor: 0.01
        offset: 250
        min:
          Double: 229.53
        max:
          Double: 270.47
        unit: degK
        receivers:
          - Receiver
attribute_definitions:
  - Message:
      - GenMsgSendType
      - Enum:
          - Cyclic
          - NotUsed
          - NotUsed
          - NotUsed
          - NotUsed
          - NotUsed
          - NotUsed
          - IfActive
          - NoMsgSendType
          - NotUsed
          - vector_leerstring
  - Message:
      - GenMsgCycleTime
      - Int:
          - Uint: 0
          - Uint: 50000
attribute_defaults:
  - name: GenMsgSendType
    value:
      String: NoMsgSendType
  - name: GenMsgCycleTime
    value:
      Uint: 0
attribute_values_message:
  - name: GenMsgCycleTime
    message_id:
      Standard: 1
    value:
      Uint: 200
  - name: GenMsgSendType
    message_id:
      Standard: 1
    value:
      Uint: 0
