tests/snapshots/dbc-cantools/val_table.snap
---
source: tests/snapshots.rs
---
version: ""
new_symbols:
  - NS_DESC_
  - CM_
  - BA_DEF_
  - BA_
  - VAL_
  - CAT_DEF_
  - CAT_
  - FILTER
  - BA_DEF_DEF_
  - EV_DATA_
  - ENVVAR_DATA_
  - SGTYPE_
  - SGTYPE_VAL_
  - BA_DEF_SGTYPE_
  - BA_SGTYPE_
  - SIG_TYPE_REF_
  - VAL_TABLE_
  - SIG_GROUP_
  - SIG_VALTYPE_
  - SIGTYPE_VALTYPE_
  - BO_TX_BU_
  - BA_DEF_REL_
  - BA_REL_
  - BA_DEF_DEF_REL_
  - BU_SG_REL_
  - BU_EV_REL_
  - BU_BO_REL_
  - SG_MUL_VAL_
bit_timing: []
value_tables:
  - name: Table3
    descriptions:
      - id: 16
        description: "16"
      - id: 7
        description: "7"
      - id: 2
        description: "2"
      - id: 0
        description: "0"
  - name: Table2
  - name: Table1
    descriptions:
      - id: 1
        description: One
      - id: 0
        description: Zero
messages:
  - id:
      Standard: 0
    name: Message1
    size: 8
    transmitter: ~
    signals:
      - name: Signal1
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Signed
        factor: 1
        offset: 0
        min:
          Uint: 0
        max:
          Uint: 0
        unit: ""
attribute_definitions:
  - Plain:
      - BusType
      - String
  - Message:
      - GenMsgCycleTime
      - Int:
          - Uint: 0
          - Uint: 65535
attribute_defaults:
  - name: BusType
    value:
      String: ""
  - name: GenMsgCycleTime
    value:
      Uint: 0
value_descriptions:
  - Signal:
      message_id:
        Standard: 0
      name: Signal1
      value_descriptions:
        - id: 1
          description: One
        - id: 0
          description: Zero
